<resources>
    <string name="app_name">ProjectAPK</string>
    <string name="appName">Appname</string>
    <string name="emailAddress">E-mail Address</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="register">REGISTER</string>
    <string name="forgotPass">I FORGOT MY PASS</string>
</resources>