<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:text="@string/appName"
        android:textColor="@color/appName"
        android:textSize="50sp"
        android:textStyle="bold"
        android:paddingHorizontal="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:autofillHints="@string/emailAddress"
            android:drawableRight="@drawable/email_icon"
            android:hint="@string/emailAddress"
            android:inputType="textEmailAddress" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:autofillHints="@string/firstName"
            android:drawableRight="@drawable/first_name_icon"
            android:hint="@string/firstName"
            android:inputType="textPersonName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:autofillHints="@string/lastName"
            android:drawableRight="@drawable/last_name_icon"
            android:hint="@string/lastName"
            android:inputType="textPersonName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:autofillHints="@string/password"
            android:drawableRight="@drawable/password_icon"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:autofillHints="@string/confirmPassword"
            android:drawableRight="@drawable/confirm_password_icon"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="25dp"
            android:text="@string/register"
            android:background="#23B984"/>

        <Button
            android:id="@+id/btn_forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/forgotPass"
            android:textSize="9sp"
            android:background="@drawable/btn_style"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:gravity="center" />
    </LinearLayout>

</LinearLayout>
